fixed blur not showing up on certain browsers

--- a/styles/model.css
+++ b/styles/model.css
@@ -351,6 +351,7 @@ input[type='range'].styled-slider.segregation-model::-moz-range-track {
 /** Results Container */
 .results-container {
   fill: rgba(52, 64, 84, 0.3);
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   height: 100svh;
   width: 100%;
